Add support for gradle caches (#4)
* Implement Gradle Secrets extension with configuration cache compatibility
* Remove Kotlin JVM plugin alias and use gradlew version